--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,16 +1,19 @@
 security:
   basic:
-    enabled: false # turn of securing our application endpoints
+    enabled: false
 
 management:
   security:
-    enabled: false # turn of securing the actuator endpoints
+    enabled: false
+
 logging: # <----New sections below
   level:
     io:
-      pivotal: INFO
+      pivotal: DEBUG
 
 greeting:
-  displayFortune: true
+  displayFortune: false
 
-quoteServiceURL: http://quote-service-dev.cfapps.io/quote
+quoteServiceURL: http://quote-service-dev.cfapps.io/quotesecurity:
+  basic:
+    enabled: false # turn of securing our application endpoints
