--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -14,6 +14,8 @@ logging: # <----New sections below
 greeting:
   displayFortune: false
 
-quoteServiceURL: http://quote-service-dev.cfapps.io/quotesecurity:
+quoteServiceURL: http://quote-service-dev.cfapps.io/
+
+quotesecurity:
   basic:
     enabled: false # turn of securing our application endpoints
